# bhajan

./: .gitignore  PRD.md  PROJECT_IMPROVEMENT_PLAN.md  README.md  api.js  api.test.js  api.test.tss  api.ts  capacitor.config.js  capacitor.config.ts  components.json  docker-compose.yml  next.config.js  package-lock.json  package.json  run-tests.js  schema.prisma  theme.css  tsconfig.json  vercel.json
android/app/: build.gradle
audio-service/: .env.example  .gitignore  Dockerfile  PRODUCT.md  README.md  docker-compose.yml  requirements-light.txt  requirements-ml.txt  requirements-muscriptor.txt  requirements.txt  worker.py
audio-service/app/: config.py  main.py  queue.py  schemas.py  storage.py
audio-service/tests/: test_align.py  test_api.py  test_chords.py  test_postprocess.py  test_resilience.py
audio-service/web/: index.html
client/: api.js  api.ts  utils.js  utils.ts
components/: LessonPlayer.tsx  Word.jsx  Word.tsx
desktop/: PRODUCT.md  README.md  index.html  package.json  vite.config.js
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs  python_sidecar.rs
lib/: api-protection.ts  bhajan-id.ts  db.js  db.ts  dictionary.ts  job-queue.ts  lesson-table.ts  lesson.ts  prisma.js  prisma.ts
pages/: 404.tsx  _app.jsx  _app.tsx  artartemev_admin.tsx  index.jsx  index.tsx
public/: sw.js  sw.js.map
scripts/: mp3_to_lesson.py  mp3_to_midi.py  populate-dictionary.js  populate-dictionary.ts
services/: bhajan.service.ts  dictionary.service.ts  translation.service.ts
(+48 files in other folders)
